5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1664_1394.log
== TEST (2019-04-16 11:05:59) 
-- CODE:
hora=int(input())

if(hora<=20):
	pag=hora*50;
	print(pag);
else:
	hora1=hora%20;
	pag=(hora*20)+hora1*70
	print(pag)
	
-- OUTPUT:
750
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:06:26) 
-- CODE:
hora=int(input())

if(hora<=20):
	pag=hora*50;
	print(pag);
else:
	hora1=hora%20;
	pag=(hora*50)+hora1*70
	print(pag)
	
-- OUTPUT:
750
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:06:57) 
-- CODE:
hora=int(input())

if(hora<=20):
	pag=hora*50;
	print(pag);
else:
	hora1=hora%20;
	pag=(hora*50)+hora1*70
	print(pag)
	
-- OUTPUT:
750
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:07:15) 
-- CODE:
hora=int(input())

if(hora<=20):
	pag=hora*50;
	print(pag);
else:
	hora1=hora%20;
	pag=(hora*50)+(hora1*70)
	print(pag)
	
-- OUTPUT:
750
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:07:33) 
-- CODE:
hora=int(input())

if(hora<=20):
	pag=hora*50;
	print(pag);
else:
	hora1=hora%20;
	pag=(hora*50)+(hora1*70)-100
	print(pag)
	
-- EXECUTION TIME:
0.197625
-- TEST CASE 1:
---- input:
15
---- correct output:
750.0
---- user output:
750
-- TEST CASE 2:
---- input:
45
---- correct output:
2750.0
---- user output:
2500
-- TEST CASE 3:
---- input:
48
---- correct output:
2960
---- user output:
2860
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:07:36) 
-- CODE:
hora=int(input())

if(hora<=20):
	pag=hora*50;
	print(pag);
else:
	hora1=hora%20;
	pag=(hora*50)+(hora1*70)-100
	print(pag)
	
-- OUTPUT:
750
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:07:44) 
-- CODE:
hora=int(input())

if(hora<=20):
	pag=hora*50;
	print(pag);
else:
	hora1=hora%20;
	pag=(hora*50)+(hora1*70)-100
	print(pag)
	
-- OUTPUT:
750
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:08:33) 
-- CODE:
hora=int(input())

if(hora<=20):
	pag=hora*50;
	print(pag);
else:
	hora1=hora%20;
	pag=(hora*50)+(hora1*70)-100
	print(pag)
	print(hora1)
	
-- OUTPUT:
750
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:10:01) 
-- CODE:
hora=float(input())

if(hora<=20):
	pag=hora*50;
	print(round(pag,2));
else:
	hora1=hora%20;
	pag=(hora*50)+(hora1*70)-100
	
	print(round(hora1,2))
	
-- OUTPUT:
750.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:10:18) 
-- CODE:
hora=float(input())

if(hora<=20):
	pag=hora*50;
	print(round(pag,2));
else:
	hora1=hora%20;
	pag=(hora*50)+(hora1*70)-100
	
	print(round(pag,2))
	
-- OUTPUT:
750.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:10:27) 
-- CODE:
hora=float(input())

if(hora<=20):
	pag=hora*50;
	print(round(pag,2));
else:
	hora1=hora%20;
	pag=(hora*50)+(hora1*70)-100
	
	print(round(pag,2))
	
-- EXECUTION TIME:
0.145082
-- TEST CASE 1:
---- input:
15
---- correct output:
750.0
---- user output:
750.0
-- TEST CASE 2:
---- input:
45
---- correct output:
2750.0
---- user output:
2500.0
-- TEST CASE 3:
---- input:
48
---- correct output:
2960
---- user output:
2860.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:11:53) 
-- CODE:
hora=float(input())

if(hora<=20):
	pag=hora*50;
	print(round(pag,2));
else:
	hora1=hora%20;
	pag=(hora*50)+(hora1*70)
	print(round(pag,2))
	
-- OUTPUT:
750.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:12:33) 
-- CODE:
hora=float(input())

if(hora<=20):
	pag=hora*50;
	print(round(pag,2));
if(hora>20):
	hora1=hora%20;
	pag=(hora*50)+(hora1*70)
	print(round(pag,2))
	
-- OUTPUT:
750.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:12:42) 
-- CODE:
hora=float(input())

if(hora<=20):
	pag=hora*50;
	print(round(pag,2));
if(hora>20):
	hora1=hora%20;
	pag=(hora*50)+(hora1*70)-100
	print(round(pag,2))
	
-- OUTPUT:
750.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:12:50) 
-- CODE:
hora=float(input())

if(hora<=20):
	pag=hora*50;
	print(round(pag,2));
if(hora>20):
	hora1=hora%20;
	pag=(hora*50)+(hora1*70)-100
	print(round(pag,2))
	
-- EXECUTION TIME:
0.188636
-- TEST CASE 1:
---- input:
15
---- correct output:
750.0
---- user output:
750.0
-- TEST CASE 2:
---- input:
45
---- correct output:
2750.0
---- user output:
2500.0
-- TEST CASE 3:
---- input:
48
---- correct output:
2960
---- user output:
2860.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:14:15) 
-- CODE:
hora=float(input())

if(hora<=20):
	pag=hora*50;
	print(round(pag,2));
if(hora>20):
	hora1=hora%20;
	hora2=hora-hora1;
	pag=(hora2*50)+(hora1*70)-100
	print(round(pag,2))
	
-- EXECUTION TIME:
0.13774
-- TEST CASE 1:
---- input:
15
---- correct output:
750.0
---- user output:
750.0
-- TEST CASE 2:
---- input:
45
---- correct output:
2750.0
---- user output:
2250.0
-- TEST CASE 3:
---- input:
48
---- correct output:
2960
---- user output:
2460.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:14:23) 
-- CODE:
hora=float(input())

if(hora<=20):
	pag=hora*50;
	print(round(pag,2));
if(hora>20):
	hora1=hora%20;
	hora2=hora-hora1;
	pag=(hora2*50)+(hora1*70)
	print(round(pag,2))
	
-- EXECUTION TIME:
0.192004
-- TEST CASE 1:
---- input:
15
---- correct output:
750.0
---- user output:
750.0
-- TEST CASE 2:
---- input:
45
---- correct output:
2750.0
---- user output:
2350.0
-- TEST CASE 3:
---- input:
48
---- correct output:
2960
---- user output:
2560.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:14:25) 
-- CODE:
hora=float(input())

if(hora<=20):
	pag=hora*50;
	print(round(pag,2));
if(hora>20):
	hora1=hora%20;
	hora2=hora-hora1;
	pag=(hora2*50)+(hora1*70)
	print(round(pag,2))
	
-- OUTPUT:
750.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:14:41) 
-- CODE:
hora=int(input())

if(hora<=20):
	pag=hora*50;
	print(round(pag,2));
if(hora>20):
	hora1=hora%20;
	hora2=hora-hora1;
	pag=(hora2*50)+(hora1*70)
	print(round(pag,2))
	
-- OUTPUT:
750
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:15:03) 
-- CODE:
hora=float(input())

if(hora<=20):
	pag=hora*50;
	print(round(pag,2));
if(hora>20):
	hora1=hora%20;
	hora2=hora-hora1;
	pag=(hora2*50)+(hora1*70)
	print(round(pag,2))
	
-- OUTPUT:
750.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:15:08) 
-- CODE:
hora=float(input())

if(hora<=20):
	pag=hora*50;
	print(round(pag,2));
if(hora>20):
	hora1=hora%20;
	hora2=hora-hora1;
	pag=(hora2*50)+(hora1*70)
	print(round(pag,2))
	
-- EXECUTION TIME:
0.202034
-- TEST CASE 1:
---- input:
15
---- correct output:
750.0
---- user output:
750.0
-- TEST CASE 2:
---- input:
45
---- correct output:
2750.0
---- user output:
2350.0
-- TEST CASE 3:
---- input:
48
---- correct output:
2960
---- user output:
2560.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:15:17) 
-- CODE:
hora=float(input())

if(hora<=20):
	pag=hora*50;
	print(round(pag,2));
if(hora>20):
	hora1=hora%20;
	hora2=hora-hora1;
	pag=(hora2*50)+(hora1*70)
	print(round(pag,2))
	
-- OUTPUT:
750.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:16:08) 
-- CODE:
hora=float(input())

if(hora<=20):
	pag=hora*50;
	print(round(pag,2));
if(hora>20):
	hora1=hora//20;
	hora2=hora-hora1;
	pag=(hora2*50)+(hora1*70)
	print(round(pag,2))
	
-- EXECUTION TIME:
0.246369
-- TEST CASE 1:
---- input:
15
---- correct output:
750.0
---- user output:
750.0
-- TEST CASE 2:
---- input:
45
---- correct output:
2750.0
---- user output:
2290.0
-- TEST CASE 3:
---- input:
48
---- correct output:
2960
---- user output:
2440.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:16:09) 
-- CODE:
hora=float(input())

if(hora<=20):
	pag=hora*50;
	print(round(pag,2));
if(hora>20):
	hora1=hora//20;
	hora2=hora-hora1;
	pag=(hora2*50)+(hora1*70)
	print(round(pag,2))
	
-- OUTPUT:
750.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:16:28) 
-- CODE:
hora=float(input())

if(hora<=20):
	pag=hora*50;
	print(round(pag,2));
if(hora>20):
	hora1=hora%20;
	hora2=hora-hora1;
	pag=(hora2*50)+(hora1*70)
	print(round(pag,2))
	
-- OUTPUT:
750.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:17:43) 
-- CODE:
hora=float(input())

if(hora<=20):
	pag=hora*50;
	print(round(pag,2));
if(hora>20):
	hora1=hora%20;
	hora2=hora-hora1;
	pag=(hora2*50)+(hora1*70)
	print(round(pag,2))
	
-- OUTPUT:
750.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:27:48) 
-- CODE:
hora=float(input())

if(hora<=20):
	pag=hora*50;
	print(round(pag,2));

if(hora%20==0):
	it=hora//20;
	hora1=hora%20;
	hora2=hora-hora1;
	pag=(it*10)*70 +hora2*50;
	print(round(pag,2))
else		
	hora1=hora%20;
	hora2=hora-hora1;
	pag=(hora2*50)+(hora1*70)
	print(round(pag,2))
	
-- EXECUTION TIME:
0.157066
-- ERROR:
  File "/home/codebench/codes/1664/1394/main.py", line 13
    else		
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:27:49) 
-- CODE:
hora=float(input())

if(hora<=20):
	pag=hora*50;
	print(round(pag,2));

if(hora%20==0):
	it=hora//20;
	hora1=hora%20;
	hora2=hora-hora1;
	pag=(it*10)*70 +hora2*50;
	print(round(pag,2))
else		
	hora1=hora%20;
	hora2=hora-hora1;
	pag=(hora2*50)+(hora1*70)
	print(round(pag,2))
	
-- ERROR:
File "XXXX", line 13
    else		
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:28:00) 
-- CODE:
hora=float(input())

if(hora<=20):
	pag=hora*50;
	print(round(pag,2));

if(hora%20==0):
	it=hora//20;
	hora1=hora%20;
	hora2=hora-hora1;
	pag=(it*10)*70 +hora2*50;
	print(round(pag,2))
else:		
	hora1=hora%20;
	hora2=hora-hora1;
	pag=(hora2*50)+(hora1*70)
	print(round(pag,2))
	
-- EXECUTION TIME:
0.192158
-- TEST CASE 1:
---- input:
15
---- correct output:
750.0
---- user output:
750.0
1050.0
-- TEST CASE 2:
---- input:
45
---- correct output:
2750.0
---- user output:
2350.0
-- TEST CASE 3:
---- input:
48
---- correct output:
2960
---- user output:
2560.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:28:01) 
-- CODE:
hora=float(input())

if(hora<=20):
	pag=hora*50;
	print(round(pag,2));

if(hora%20==0):
	it=hora//20;
	hora1=hora%20;
	hora2=hora-hora1;
	pag=(it*10)*70 +hora2*50;
	print(round(pag,2))
else:		
	hora1=hora%20;
	hora2=hora-hora1;
	pag=(hora2*50)+(hora1*70)
	print(round(pag,2))
	
-- OUTPUT:
750.0
1050.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:28:44) 
-- CODE:
hora=int(input())

if(hora<=20):
	pag=hora*50;
	print(round(pag,2));

if(hora%20==0):
	it=hora//20;
	hora1=hora%20;
	hora2=hora-hora1;
	pag=(it*10)*70 +hora2*50;
	print(round(pag,2))
else:		
	hora1=hora%20;
	hora2=hora-hora1;
	pag=(hora2*50)+(hora1*70)
	print(round(pag,2))
	
-- EXECUTION TIME:
0.191466
-- TEST CASE 1:
---- input:
15
---- correct output:
750.0
---- user output:
750
1050
-- TEST CASE 2:
---- input:
45
---- correct output:
2750.0
---- user output:
2350
-- TEST CASE 3:
---- input:
48
---- correct output:
2960
---- user output:
2560
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:28:45) 
-- CODE:
hora=int(input())

if(hora<=20):
	pag=hora*50;
	print(round(pag,2));

if(hora%20==0):
	it=hora//20;
	hora1=hora%20;
	hora2=hora-hora1;
	pag=(it*10)*70 +hora2*50;
	print(round(pag,2))
else:		
	hora1=hora%20;
	hora2=hora-hora1;
	pag=(hora2*50)+(hora1*70)
	print(round(pag,2))
	
-- OUTPUT:
750
1050
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:40:23) 
-- CODE:
hora=int(input())
pag=hora*50
if(hora<=20):
	pag=hora*50;
	print(round(pag,2));
else:
	it=hora-20
	pag2=pag+it*70
	print(pag2)
	
-- EXECUTION TIME:
0.112044
-- TEST CASE 1:
---- input:
15
---- correct output:
750.0
---- user output:
750
-- TEST CASE 2:
---- input:
45
---- correct output:
2750.0
---- user output:
4000
-- TEST CASE 3:
---- input:
48
---- correct output:
2960
---- user output:
4360
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:40:25) 
-- CODE:
hora=int(input())
pag=hora*50
if(hora<=20):
	pag=hora*50;
	print(round(pag,2));
else:
	it=hora-20
	pag2=pag+it*70
	print(pag2)
	
-- OUTPUT:
750
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:41:11) 
-- CODE:
hora=int(input())
pag=hora*50
if(hora<=20):
	pag=hora*50;
	print(round(pag,2));
else:
	it=hora-20
	pag2=pag+(it*70)
	print(pag2)
	
-- OUTPUT:
750
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:41:23) 
-- CODE:
hora=int(input())
pag=hora*50
if(hora<=20):
	pag=hora*50;
	print(round(pag,2));
else:
	it=hora-20
	pag2=pag+(it*70)-100
	print(pag2)
	
-- EXECUTION TIME:
0.212161
-- TEST CASE 1:
---- input:
15
---- correct output:
750.0
---- user output:
750
-- TEST CASE 2:
---- input:
45
---- correct output:
2750.0
---- user output:
3900
-- TEST CASE 3:
---- input:
48
---- correct output:
2960
---- user output:
4260
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:41:25) 
-- CODE:
hora=int(input())
pag=hora*50
if(hora<=20):
	pag=hora*50;
	print(round(pag,2));
else:
	it=hora-20
	pag2=pag+(it*70)-100
	print(pag2)
	
-- OUTPUT:
750
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:42:53) 
-- CODE:
hora=int(input())

if(hora<=20):
	pag=hora*50;
	print(round(pag,2));
else:
	it=hora-20
	pag2=(20*50)+(it*70)
	print(pag2)
	
-- EXECUTION TIME:
0.173293
-- TEST CASE 1:
---- input:
15
---- correct output:
750.0
---- user output:
750
-- TEST CASE 2:
---- input:
45
---- correct output:
2750.0
---- user output:
2750
-- TEST CASE 3:
---- input:
48
---- correct output:
2960
---- user output:
2960
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
